--- a/AndrApp/local.properties
+++ b/AndrApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 26 19:52:52 NOVT 2025
-sdk.dir=C\:\\Users\\ivan_\\AppData\\Local\\Android\\Sdk
+#Mon May 12 09:48:29 NOVT 2025
+sdk.dir=/home/ivanov_ia/Android/Sdk
