--- a/AndrApp/app/src/main/AndroidManifest.xml
+++ b/AndrApp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,8 +21,16 @@
         android:theme="@style/Theme.AndrApp"
         tools:targetApi="31">
         <activity
+            android:name=".ServerActivity"
+            android:exported="false" />
+        <activity
             android:name=".LocationActivity"
             android:exported="false" />
+
+        <service
+            android:name=".MusicService"
+            android:exported="false" />
+
         <activity
             android:name=".Player"
             android:exported="false" />
